# scrollDB

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
bunkr/: Cargo.toml
bunkr-py/: Cargo.toml  README.md  pyproject.toml
bunkr-py/examples/: basic_usage.py
bunkr-py/src/: lib.rs
bunkr-py/tests/: test_basic.py
bunkr/src/: collection.rs  db.rs  error.rs  lib.rs
bunkr/src/index/: mod.rs  text.rs
bunkr/src/query/: matcher.rs  mod.rs  operators.rs  path.rs  update.rs
bunkr/src/query/text/: mod.rs
bunkr/src/storage/: document.rs  header.rs  mod.rs  page.rs  page_manager.rs
bunkr/src/types/: mod.rs  object_id.rs  value.rs
scrolldb/: Cargo.toml
scrolldb-py/: Cargo.toml  README.md  pyproject.toml
scrolldb-py/examples/: basic_usage.py
scrolldb-py/src/: lib.rs
scrolldb-py/tests/: test_basic.py
scrolldb/src/: collection.rs  db.rs  error.rs
scrolldb/src/index/: field_index.rs  id_index.rs
scrolldb/src/query/: matcher.rs  operators.rs
scrolldb/src/query/text/: mod.rs
scrolldb/src/storage/: document.rs  header.rs  page.rs  page_manager.rs
scrolldb/src/types/: value.rs
src/: db.rs  error.rs  lib.rs
src/storage/: header.rs  mod.rs
