[workspace]
members = ["bunkr"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = []

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

