[package]
name = "scrolldb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
uuid.workspace = true
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[[bench]]
name = "scrolldb_bench"
harness = false

[[bench]]
name = "sqlite_bench"
harness = false
